--- a/demo/music_player_web/index.html
+++ b/demo/music_player_web/index.html
@@ -7,6 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Web版音乐播放器</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdn.bootcss.com/font-awesome/5.8.2/css/all.css">
 </head>
 
 <body>
@@ -36,7 +37,7 @@
             <div id="page-panel">
                 <div>
                     <div id="page-pre">&lt;</div>
-                    <div id="pages"></div>
+                    <div id="pagination"></div>
                     <div id="page-next">&gt;</div>
                 </div>
             </div>
@@ -47,7 +48,6 @@
                 <source
                     src="http://zhangmenshiting.qianqian.com/data2/music/c077e9e8d8fb63f136adc14373550d17/599553398/35438710800128.mp3?xcode=48f570a54a60104358a651629ec11350"
                     type="audio/mp3">
-                您的浏览器不支持 audio 元素。
             </audio>
         </div>
         <!-- 专辑图片 -->
