--- a/demo/music_player_web/index.html
+++ b/demo/music_player_web/index.html
@@ -35,11 +35,9 @@
             </div>
             <div id="list"></div>
             <div id="page-panel">
-                <div>
-                    <div id="page-pre">&lt;</div>
-                    <div id="pagination"></div>
-                    <div id="page-next">&gt;</div>
-                </div>
+                <div id="page-pre">&lt;</div>
+                <div id="pagination"></div>
+                <div id="page-next">&gt;</div>
             </div>
         </div>
         <!-- 控制面板 -->
@@ -60,6 +58,9 @@
             <pre><code>
 
             </code></pre>
+        </div>
+        <!-- 歌手详情 -->
+        <div id="intro">
         </div>
     </div>
     <script src="script.js"></script>
